Bouncy emote default on. Fix bouncy emote scrollbars. Add AI video promo for discord bot.

--- a/javascript/control_panel/src/Animations.scss
+++ b/javascript/control_panel/src/Animations.scss
@@ -3,12 +3,14 @@
   position: relative;
   background: #00b140;
   height: 100vh;
+  overflow: hidden;
 
   .emotes_container {
     position: absolute;
     z-index: 2;
     width: 100%;
     height: 100%;
+    overflow: hidden;
 
     .emote {
       position: absolute;
