--- a/javascript/control_panel/src/Subtitles.scss
+++ b/javascript/control_panel/src/Subtitles.scss
@@ -21,7 +21,7 @@
   font-family: 'BubblegumSans-Regular';
   font-weight: bold;
   color: hotpink;
-  text-shadow: 8px 8px 16px black;
+  text-shadow: 2px 2px 4px black;
   -webkit-text-stroke: 1px black;
   font-size: 72px;
   line-height: 88px;
